--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-8 ">
-            <img class="jumbo" src="../pantai.avif" alt="orang di pantai">
+            <img class="jumbo" src="pantai.avif" alt="orang di pantai">
           </div>
         </div>
         
