--- a/bootsrap5.html
+++ b/bootsrap5.html
@@ -14,7 +14,7 @@
 
     <title>My Portofolio | Sofyan Tanjung</title>
     <link rel="stylesheet" href="bootsrap5.css">
-    <link rel="preload" as="image" href="../301916590_1116381765928089_8582271123281649851_n (1).jpg">
+    <link rel="preload" as="image" href="301916590_1116381765928089_8582271123281649851_n (1).jpg">
     <link rel="preload" as="image" href="1.jpg">
   </head>
   <body id="home">
@@ -134,7 +134,7 @@
     <!-- Akhir Project -->
 
     <!-- Gallery -->
-    <section id="gallery" class="gallery">
+    <section id="gallery">
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
@@ -143,7 +143,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-8 ">
-            <img class="jumbo" src="pantai.avif" alt="orang di pantai">
+            <img class="jumbokon" src="pantai.avif" alt="orang di pantai">
           </div>
         </div>
         
@@ -332,6 +332,6 @@
 
       
     </script>
-    <script src="Boostrap.js"></script>
+
   </body>
 </html>
